--- a/masxinlingvonta-cli/pom.xml
+++ b/masxinlingvonta-cli/pom.xml
@@ -69,7 +69,7 @@
         <dependency>
             <groupId>net.superblaubeere27</groupId>
             <artifactId>masxinlingvonta-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.parent.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
